--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ body {
 .site-wrapper {
   min-width: 940px;
   background-color: #849d8f;
-	background-image: url("../img/light.png");
   background-repeat: no-repeat;
   background-position: top center;
 
@@ -27,6 +26,7 @@ body {
   margin: 0 auto;
   padding: 0 20px;
 }
+
 
 
 a {	
@@ -55,20 +55,23 @@ input[type="radio"].visually-hidden {
   white-space: nowrap;
 
   clip-path: inset(100%);
-  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
   overflow: hidden;
 }
 
+.main-header {
+
+}
 
 .main-header-logo {
 	 width: 154px;
-	 height: 64px;
 }
 
 .header-info {
 	display: flex;
 	width: 1146px;
-	margin:7px 27px 0;
+	margin: 0px;
+	padding-top: 7px;
 
 }
 
@@ -128,7 +131,32 @@ input[type="radio"].visually-hidden {
 	justify-content: space-between;
 	font-weight: bold;
 	margin-left: 20px;
-	margin-bottom: 30px;
+	margin-bottom: 0px;
+}
+
+.main-navigation ul,
+.main-navigation li {
+	margin: 0px;
+	padding: 0px;
+}
+
+.site-navigation > li {
+	position: relative;
+}
+
+.site-navigation .sub-menu {
+	position: absolute;
+	width: 142px;
+	margin: 0;
+	padding: 0;
+	display: none;
+	list-style: none;
+	color: #000000;
+	background-color: #ffffff;
+}
+
+.site-navigation > li:hover .sub-menu {
+  display: block;
 }
 
 .site-navigation {
@@ -155,7 +183,6 @@ input[type="radio"].visually-hidden {
 	width: 268px;
 	justify-content: space-between;
 
-	margin-bottom: 30px;
 	padding: 0;
 	list-style: none;
 }
@@ -170,6 +197,7 @@ input[type="radio"].visually-hidden {
 }
 
 .user-navigation li:first-child {
+	position: relative;
 	width: 35px;
 	height: 35px;
 	background-color: rgba(255, 255, 255, 0.2);
@@ -180,6 +208,38 @@ input[type="radio"].visually-hidden {
 	border-radius: 50px;
 }
 
+.user-navigation .modal-search {
+	position: absolute;
+	top: 39px;
+	right: 0px;
+	color: #231f20;
+	width: 280px;
+	border-radius: 10px;
+	padding: 21px 16px;
+	display: none;
+	z-index: 10;
+}
+
+.user-navigation >li:hover .modal-search {
+	display: block;
+}
+
+.modal-search input[type="text"] {
+	box-sizing: border-box;
+  	width: 279px;
+  	padding: 15px 15px;
+
+  	font: inherit;
+  	color: #999999;
+
+  	border-style: solid;
+  	border-width: 1px;
+  	border-color: rgb(178, 178, 178);
+  	border-radius: 5px;
+  	background-color: rgb(255, 255, 255);
+  	opacity: 0.52;
+}
+
 .user-navigation li:nth-child(2) {
 	padding-top: 9px;
 	width: 49px;
@@ -188,6 +248,67 @@ input[type="radio"].visually-hidden {
 	padding-left: 45px;
 	padding-right: 17px;
 	border-radius: 50px;
+}
+
+.user-navigation .modal-login {
+	display: none;
+	position: absolute;
+	top: 39px;
+	right: 0px;
+	color: #231f20;
+	width: 238px;
+	border-radius: 10px;
+	padding: 21px 20px;
+	z-index: 10;
+}
+
+
+.user-navigation > li:hover .modal-login {
+	display: block;
+}
+
+
+.login-form input[type="text"],
+.login-form input[type="password"] {
+	box-sizing: border-box;
+  	width: 240px;
+  	padding: 16px 15px;
+
+  	font: inherit;
+  	color: #999999;
+
+  	border-style: solid;
+  	border-width: 1px;
+  	border-color: rgb(178, 178, 178);
+  	border-radius: 5px;
+  	background-color: rgb(255, 255, 255);
+  	opacity: 0.52;
+}
+
+.modal-login a {
+	color: #000000;
+	text-decoration: underline;
+}
+
+.modal-login-choice {
+	display: flex;
+	width: 242px;
+	justify-content: space-between;
+}
+
+.modal-login-choice button {
+	margin-right: 18px;
+}
+
+.password-registration {
+	display: flex;
+	flex-wrap: wrap;
+	width: 180px;
+}
+
+.password-registration a {
+	font-size: 13px;
+	line-height: 24px;
 }
 
 .user-navigation li:last-child {
@@ -211,6 +332,11 @@ input[type="radio"].visually-hidden {
 	background-image: url(../img/basket.svg);
 	background-repeat: no-repeat;
 	background-position: 0 0;
+	opacity: 0.3;
+}
+
+.user-navigation li:last-child:hover::before {
+	opacity: 1;
 }
 
 .site-navigation a,
@@ -239,6 +365,10 @@ input[type="radio"].visually-hidden {
 	background-position: 0 0;
 }
 
+.user-navigation li:nth-child(2):hover::before {
+	opacity: 0.1;
+}
+
 .header-contacts {
 	position: absolute;
 	right: 27px;
@@ -260,7 +390,7 @@ input[type="radio"].visually-hidden {
 .slider {
   position: relative;
   
-  padding-top: 321px;
+  padding-top: 391px;
   
   text-align: center;
   color: #ffffff;
@@ -398,24 +528,77 @@ input[type="radio"].visually-hidden {
 	font-weight: 400;
 }
 
+.offer-items {
+	min-height: 230px;
+}
+
 .offer-item-1 {
 	width: 560px;
-  	background-image: url("../img/raspberry.png");
-  	background-repeat: no-repeat;
+  	background-image: url("../img/raspberry.jpg");
+  	background-origin: content-box;
+    background-clip: content-box;
   	border-radius: 10px;
-  	padding-left: 21px;
+
   	margin-right: 26px;
   	text-align: left;
 }
 
+.offer-item-1 .offer-item-text {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	  	padding-left: 21px;
+}
+
+.offer-item-1 h3 {
+	padding: 0px;
+	margin-bottom: 15px;
+}
+
+.offer-item-1 p {
+	padding-top: 0;
+	padding-bottom: 30px;
+}
+
+.offer-item-1 .button-offer {
+	display: flex;
+	padding-top: 0px;
+	margin-top: -30px;
+	margin-left: 360px;
+}
+
 .offer-item-2 {
 	width: 560px;
-  	background-image: url("../img/chocolate.png");
-  	background-repeat: no-repeat;
+  	background-image: url("../img/chocolate.jpg");
+  	background-origin: content-box;
+    background-clip: content-box;
   	border-radius: 10px;
-  	padding-left: 21px;
   	text-align: left;
 
+}
+
+.offer-item-2 .offer-item-text {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	padding-left: 25px;
+}
+
+.offer-item-2 h3 {
+	padding: 0px;
+	margin-bottom: 20px;
+}
+
+.offer-item-2 p {
+	padding-top: 0;
+	padding-bottom: 20px;
+}
+
+.offer-item-2 .button-offer {
+	display: flex;
+	padding-top: 0px;
+	margin-top: -24px;
+	margin-left: 330px;
 }
 
 .offer-items h3 {
@@ -572,36 +755,56 @@ input[type="radio"].visually-hidden {
 }
 
 .blog-entry {
+	display: flex;
 	color: #323232;
 	width: 560px;
-	background-image: url("../img/strawberry.png");
+	background-image: url("../img/strawberry.jpg");
 	background-repeat: no-repeat;
+	background-origin: content-box;
+    background-clip: content-box;
+    border-radius: 10px;
+    background-position: 18% 38%;
 }
 
 .blog-entry img {
 	padding: 0;
 }
 
+.blog-entry-wrapper {
+	display: flex;
+	width: 300px;
+
+}
+
 .blog-entry h2 {
+	display: flex;
+	width: 282px;
 	font-size: 16px;
 	line-height: 22px;
+		padding-left: 19px;
+	padding-top: 26px;
 }
 
 .blog-entry a {
+	display: block;
 	text-decoration: underline;
+	width: 282px;
 	font-size: 24px;
 	line-height: 30px;
 	color: inherit;
+		padding-left: 19px;
+	
 }
 
 .subscribe {
+	position: relative;
 	width: 560px;
 	font-size: 16px;
 	line-height: 22px; 
 	color: #5a5a5a;
 	background-image: url("../img/post.png");
 	background-repeat: no-repeat;
-	background-position: center;
+	background-position: 50% 50%, 30% 30%;
 }
 
 .subscribe p,
@@ -611,11 +814,43 @@ input[type="radio"].visually-hidden {
 }
 
 .subscribe-layer {
-	background-image: url("../img/layer-subscribe.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	padding: 5px;
-	width: 540px;
+	width: 544px;
+	height: 209px;
+	border-radius: 10px;
+	position: absolute;
+	background-color: #ffffff;
+	background-size: 250px 30px;
+	top: 5px;
+	left: 5px;
+}
+
+.subscribe-content {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	flex-direction: flex-start;
+	padding: 20px 25px;
+}
+
+.subscribe-content .subscribe-explain {
+	display: flex;
+	width: 450px;
+	font-size: 16px;
+	line-height: 22px;
+	margin-bottom: 26px;
+}
+
+.subscribe-form {
+	display: flex;
+	margin-top: 20px;
+}
+
+.subscribe-post {
+	color: #231f20;
+	width: 288px;
+	border-radius: 10px;
+	padding: 15px 15px;
+	margin-right: 10px;
 }
 
 .map {
@@ -1011,9 +1246,6 @@ input[type="radio"].visually-hidden {
 	width: 218px;
 }
 
-input[type=range] {
-	display: none;
-}
 
 input[type=range]:focus {
   outline: none;
@@ -1148,11 +1380,30 @@ input[type=range]:focus {
 }
 
 .icecream-item {
+	position: relative;
 	width: 267px;
 	position: relative;
 	padding: 5px 10px;
 	border-radius: 10px;
 	z-index: 2;
+}
+
+.icecream-item .hidden-article {
+	display: none;
+	position: absolute;
+	left: 100px;
+	background-color: rgba(255, 255, 255, 0.2);
+}
+
+.icecream-item:hover .hidden-article {
+	display: block;
+	z-index: 10;
+}
+
+.icecream-item:hover {
+	background-color: rgba(255, 255, 255, 0.2);
+	background: cover;
+	background-size: 300px 200px;
 }
 
 .icecream-item h3 {
@@ -1176,9 +1427,6 @@ input[type=range]:focus {
 	line-height: 45px;
 	}
 
-.icecream-item:hover {
-	background-color: rgba(255, 255, 255, 0.2);
-}
 
 .articles-list a {
 	color: #ffffff;
@@ -1220,56 +1468,6 @@ input[type=range]:focus {
 	border-radius: 50px;
 }
 
-.modal-login {
-	color: #231f20;
-	width: 238px;
-	border-radius: 10px;
-	right: 30px;
-	padding: 21px 20px;
-}
-
-.login-form input[type="text"],
-.login-form input[type="password"] {
-	box-sizing: border-box;
-  	width: 240px;
-  	padding: 16px 15px;
-
-  	font: inherit;
-  	color: #999999;
-
-  	border-style: solid;
-  	border-width: 1px;
-  	border-color: rgb(178, 178, 178);
-  	border-radius: 5px;
-  	background-color: rgb(255, 255, 255);
-  	opacity: 0.52;
-}
-
-.modal-login a {
-	color: #000000;
-	text-decoration: underline;
-}
-
-.modal-login-choice {
-	display: flex;
-	width: 242px;
-	justify-content: space-between;
-}
-
-.modal-login-choice button {
-	margin-right: 18px;
-}
-
-.password-registration {
-	display: flex;
-	flex-wrap: wrap;
-	width: 180px;
-}
-
-.password-registration a {
-	font-size: 13px;
-	line-height: 24px;
-}
 
 .entrance:hover {
 	;
